--- a/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesetbindings.yaml
+++ b/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesetbindings.yaml
@@ -47,17 +47,17 @@ spec:
               ClusterResourceSetBinding.
             properties:
               bindings:
-                description: Bindings is a list of ClusterResourceSets and their resources.
+                description: bindings is a list of ClusterResourceSets and their resources.
                 items:
                   description: ResourceSetBinding keeps info on all of the resources
                     in a ClusterResourceSet.
                   properties:
                     clusterResourceSetName:
-                      description: ClusterResourceSetName is the name of the ClusterResourceSet
+                      description: clusterResourceSetName is the name of the ClusterResourceSet
                         that is applied to the owner cluster of the binding.
                       type: string
                     resources:
-                      description: Resources is a list of resources that the ClusterResourceSet
+                      description: resources is a list of resources that the ClusterResourceSet
                         has.
                       items:
                         description: ResourceBinding shows the status of a resource
@@ -65,28 +65,28 @@ spec:
                           cluster of the ClusterResourceSetBinding object.
                         properties:
                           applied:
-                            description: Applied is to track if a resource is applied
+                            description: applied is to track if a resource is applied
                               to the cluster or not.
                             type: boolean
                           hash:
                             description: |-
-                              Hash is the hash of a resource's data. This can be used to decide if a resource is changed.
+                              hash is the hash of a resource's data. This can be used to decide if a resource is changed.
                               For "ApplyOnce" ClusterResourceSet.spec.strategy, this is no-op as that strategy does not act on change.
                             type: string
                           kind:
-                            description: 'Kind of the resource. Supported kinds are:
+                            description: 'kind of the resource. Supported kinds are:
                               Secrets and ConfigMaps.'
                             enum:
                             - Secret
                             - ConfigMap
                             type: string
                           lastAppliedTime:
-                            description: LastAppliedTime identifies when this resource
+                            description: lastAppliedTime identifies when this resource
                               was last applied to the cluster.
                             format: date-time
                             type: string
                           name:
-                            description: Name of the resource that is in the same
+                            description: name of the resource that is in the same
                               namespace with ClusterResourceSet object.
                             minLength: 1
                             type: string
@@ -142,17 +142,17 @@ spec:
               ClusterResourceSetBinding.
             properties:
               bindings:
-                description: Bindings is a list of ClusterResourceSets and their resources.
+                description: bindings is a list of ClusterResourceSets and their resources.
                 items:
                   description: ResourceSetBinding keeps info on all of the resources
                     in a ClusterResourceSet.
                   properties:
                     clusterResourceSetName:
-                      description: ClusterResourceSetName is the name of the ClusterResourceSet
+                      description: clusterResourceSetName is the name of the ClusterResourceSet
                         that is applied to the owner cluster of the binding.
                       type: string
                     resources:
-                      description: Resources is a list of resources that the ClusterResourceSet
+                      description: resources is a list of resources that the ClusterResourceSet
                         has.
                       items:
                         description: ResourceBinding shows the status of a resource
@@ -160,28 +160,28 @@ spec:
                           cluster of the ClusterResourceSetBinding object.
                         properties:
                           applied:
-                            description: Applied is to track if a resource is applied
+                            description: applied is to track if a resource is applied
                               to the cluster or not.
                             type: boolean
                           hash:
                             description: |-
-                              Hash is the hash of a resource's data. This can be used to decide if a resource is changed.
+                              hash is the hash of a resource's data. This can be used to decide if a resource is changed.
                               For "ApplyOnce" ClusterResourceSet.spec.strategy, this is no-op as that strategy does not act on change.
                             type: string
                           kind:
-                            description: 'Kind of the resource. Supported kinds are:
+                            description: 'kind of the resource. Supported kinds are:
                               Secrets and ConfigMaps.'
                             enum:
                             - Secret
                             - ConfigMap
                             type: string
                           lastAppliedTime:
-                            description: LastAppliedTime identifies when this resource
+                            description: lastAppliedTime identifies when this resource
                               was last applied to the cluster.
                             format: date-time
                             type: string
                           name:
-                            description: Name of the resource that is in the same
+                            description: name of the resource that is in the same
                               namespace with ClusterResourceSet object.
                             minLength: 1
                             type: string
@@ -234,17 +234,17 @@ spec:
               ClusterResourceSetBinding.
             properties:
               bindings:
-                description: Bindings is a list of ClusterResourceSets and their resources.
+                description: bindings is a list of ClusterResourceSets and their resources.
                 items:
                   description: ResourceSetBinding keeps info on all of the resources
                     in a ClusterResourceSet.
                   properties:
                     clusterResourceSetName:
-                      description: ClusterResourceSetName is the name of the ClusterResourceSet
+                      description: clusterResourceSetName is the name of the ClusterResourceSet
                         that is applied to the owner cluster of the binding.
                       type: string
                     resources:
-                      description: Resources is a list of resources that the ClusterResourceSet
+                      description: resources is a list of resources that the ClusterResourceSet
                         has.
                       items:
                         description: ResourceBinding shows the status of a resource
@@ -252,28 +252,28 @@ spec:
                           cluster of the ClusterResourceSetBinding object.
                         properties:
                           applied:
-                            description: Applied is to track if a resource is applied
+                            description: applied is to track if a resource is applied
                               to the cluster or not.
                             type: boolean
                           hash:
                             description: |-
-                              Hash is the hash of a resource's data. This can be used to decide if a resource is changed.
+                              hash is the hash of a resource's data. This can be used to decide if a resource is changed.
                               For "ApplyOnce" ClusterResourceSet.spec.strategy, this is no-op as that strategy does not act on change.
                             type: string
                           kind:
-                            description: 'Kind of the resource. Supported kinds are:
+                            description: 'kind of the resource. Supported kinds are:
                               Secrets and ConfigMaps.'
                             enum:
                             - Secret
                             - ConfigMap
                             type: string
                           lastAppliedTime:
-                            description: LastAppliedTime identifies when this resource
+                            description: lastAppliedTime identifies when this resource
                               was last applied to the cluster.
                             format: date-time
                             type: string
                           name:
-                            description: Name of the resource that is in the same
+                            description: name of the resource that is in the same
                               namespace with ClusterResourceSet object.
                             minLength: 1
                             type: string
@@ -289,7 +289,7 @@ spec:
                 type: array
               clusterName:
                 description: |-
-                  ClusterName is the name of the Cluster this binding applies to.
+                  clusterName is the name of the Cluster this binding applies to.
                   Note: this field mandatory in v1beta2.
                 type: string
             type: object
