--- a/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesets.yaml
+++ b/config/crd/bases/addons.cluster.x-k8s.io_clusterresourcesets.yaml
@@ -95,20 +95,20 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               resources:
-                description: Resources is a list of Secrets/ConfigMaps where each
+                description: resources is a list of Secrets/ConfigMaps where each
                   contains 1 or more resources to be applied to remote clusters.
                 items:
                   description: ResourceRef specifies a resource.
                   properties:
                     kind:
-                      description: 'Kind of the resource. Supported kinds are: Secrets
+                      description: 'kind of the resource. Supported kinds are: Secrets
                         and ConfigMaps.'
                       enum:
                       - Secret
                       - ConfigMap
                       type: string
                     name:
-                      description: Name of the resource that is in the same namespace
+                      description: name of the resource that is in the same namespace
                         with ClusterResourceSet object.
                       minLength: 1
                       type: string
@@ -118,7 +118,7 @@ spec:
                   type: object
                 type: array
               strategy:
-                description: Strategy is the strategy to be used during applying resources.
+                description: strategy is the strategy to be used during applying resources.
                   Defaults to ApplyOnce. This field is immutable.
                 enum:
                 - ApplyOnce
@@ -130,7 +130,7 @@ spec:
             description: ClusterResourceSetStatus defines the observed state of ClusterResourceSet.
             properties:
               conditions:
-                description: Conditions defines current state of the ClusterResourceSet.
+                description: conditions defines current state of the ClusterResourceSet.
                 items:
                   description: Condition defines an observation of a Cluster API resource
                     operational state.
@@ -155,16 +155,16 @@ spec:
                       type: string
                     severity:
                       description: |-
-                        Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                        severity provides an explicit classification of Reason code, so the users or machines can immediately
                         understand the current situation and act accordingly.
                         The Severity field MUST be set only when Status=False.
                       type: string
                     status:
-                      description: Status of the condition, one of True, False, Unknown.
+                      description: status of the condition, one of True, False, Unknown.
                       type: string
                     type:
                       description: |-
-                        Type of condition in CamelCase or in foo.example.com/CamelCase.
+                        type of condition in CamelCase or in foo.example.com/CamelCase.
                         Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
@@ -174,7 +174,7 @@ spec:
                   type: object
                 type: array
               observedGeneration:
-                description: ObservedGeneration reflects the generation of the most
+                description: observedGeneration reflects the generation of the most
                   recently observed ClusterResourceSet.
                 format: int64
                 type: integer
@@ -269,20 +269,20 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               resources:
-                description: Resources is a list of Secrets/ConfigMaps where each
+                description: resources is a list of Secrets/ConfigMaps where each
                   contains 1 or more resources to be applied to remote clusters.
                 items:
                   description: ResourceRef specifies a resource.
                   properties:
                     kind:
-                      description: 'Kind of the resource. Supported kinds are: Secrets
+                      description: 'kind of the resource. Supported kinds are: Secrets
                         and ConfigMaps.'
                       enum:
                       - Secret
                       - ConfigMap
                       type: string
                     name:
-                      description: Name of the resource that is in the same namespace
+                      description: name of the resource that is in the same namespace
                         with ClusterResourceSet object.
                       minLength: 1
                       type: string
@@ -292,7 +292,7 @@ spec:
                   type: object
                 type: array
               strategy:
-                description: Strategy is the strategy to be used during applying resources.
+                description: strategy is the strategy to be used during applying resources.
                   Defaults to ApplyOnce. This field is immutable.
                 enum:
                 - ApplyOnce
@@ -304,7 +304,7 @@ spec:
             description: ClusterResourceSetStatus defines the observed state of ClusterResourceSet.
             properties:
               conditions:
-                description: Conditions defines current state of the ClusterResourceSet.
+                description: conditions defines current state of the ClusterResourceSet.
                 items:
                   description: Condition defines an observation of a Cluster API resource
                     operational state.
@@ -329,16 +329,16 @@ spec:
                       type: string
                     severity:
                       description: |-
-                        Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                        severity provides an explicit classification of Reason code, so the users or machines can immediately
                         understand the current situation and act accordingly.
                         The Severity field MUST be set only when Status=False.
                       type: string
                     status:
-                      description: Status of the condition, one of True, False, Unknown.
+                      description: status of the condition, one of True, False, Unknown.
                       type: string
                     type:
                       description: |-
-                        Type of condition in CamelCase or in foo.example.com/CamelCase.
+                        type of condition in CamelCase or in foo.example.com/CamelCase.
                         Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
@@ -348,7 +348,7 @@ spec:
                   type: object
                 type: array
               observedGeneration:
-                description: ObservedGeneration reflects the generation of the most
+                description: observedGeneration reflects the generation of the most
                   recently observed ClusterResourceSet.
                 format: int64
                 type: integer
@@ -440,20 +440,20 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               resources:
-                description: Resources is a list of Secrets/ConfigMaps where each
+                description: resources is a list of Secrets/ConfigMaps where each
                   contains 1 or more resources to be applied to remote clusters.
                 items:
                   description: ResourceRef specifies a resource.
                   properties:
                     kind:
-                      description: 'Kind of the resource. Supported kinds are: Secrets
+                      description: 'kind of the resource. Supported kinds are: Secrets
                         and ConfigMaps.'
                       enum:
                       - Secret
                       - ConfigMap
                       type: string
                     name:
-                      description: Name of the resource that is in the same namespace
+                      description: name of the resource that is in the same namespace
                         with ClusterResourceSet object.
                       minLength: 1
                       type: string
@@ -463,7 +463,7 @@ spec:
                   type: object
                 type: array
               strategy:
-                description: Strategy is the strategy to be used during applying resources.
+                description: strategy is the strategy to be used during applying resources.
                   Defaults to ApplyOnce. This field is immutable.
                 enum:
                 - ApplyOnce
@@ -476,7 +476,7 @@ spec:
             description: ClusterResourceSetStatus defines the observed state of ClusterResourceSet.
             properties:
               conditions:
-                description: Conditions defines current state of the ClusterResourceSet.
+                description: conditions defines current state of the ClusterResourceSet.
                 items:
                   description: Condition defines an observation of a Cluster API resource
                     operational state.
@@ -501,16 +501,16 @@ spec:
                       type: string
                     severity:
                       description: |-
-                        Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                        severity provides an explicit classification of Reason code, so the users or machines can immediately
                         understand the current situation and act accordingly.
                         The Severity field MUST be set only when Status=False.
                       type: string
                     status:
-                      description: Status of the condition, one of True, False, Unknown.
+                      description: status of the condition, one of True, False, Unknown.
                       type: string
                     type:
                       description: |-
-                        Type of condition in CamelCase or in foo.example.com/CamelCase.
+                        type of condition in CamelCase or in foo.example.com/CamelCase.
                         Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
@@ -521,7 +521,7 @@ spec:
                   type: object
                 type: array
               observedGeneration:
-                description: ObservedGeneration reflects the generation of the most
+                description: observedGeneration reflects the generation of the most
                   recently observed ClusterResourceSet.
                 format: int64
                 type: integer
