--- a/config/crd/bases/runtime.cluster.x-k8s.io_extensionconfigs.yaml
+++ b/config/crd/bases/runtime.cluster.x-k8s.io_extensionconfigs.yaml
@@ -49,35 +49,35 @@ spec:
             description: ExtensionConfigSpec is the desired state of the ExtensionConfig
             properties:
               clientConfig:
-                description: ClientConfig defines how to communicate with the Extension
+                description: clientConfig defines how to communicate with the Extension
                   server.
                 properties:
                   caBundle:
-                    description: CABundle is a PEM encoded CA bundle which will be
+                    description: caBundle is a PEM encoded CA bundle which will be
                       used to validate the Extension server's server certificate.
                     format: byte
                     type: string
                   service:
                     description: |-
-                      Service is a reference to the Kubernetes service for the Extension server.
+                      service is a reference to the Kubernetes service for the Extension server.
                       Note: Exactly one of `url` or `service` must be specified.
 
                       If the Extension server is running within a cluster, then you should use `service`.
                     properties:
                       name:
-                        description: Name is the name of the service.
+                        description: name is the name of the service.
                         type: string
                       namespace:
-                        description: Namespace is the namespace of the service.
+                        description: namespace is the namespace of the service.
                         type: string
                       path:
                         description: |-
-                          Path is an optional URL path and if present may be any string permissible in
+                          path is an optional URL path and if present may be any string permissible in
                           a URL. If a path is set it will be used as prefix to the hook-specific path.
                         type: string
                       port:
                         description: |-
-                          Port is the port on the service that's hosting the Extension server.
+                          port is the port on the service that's hosting the Extension server.
                           Defaults to 443.
                           Port should be a valid port number (1-65535, inclusive).
                         format: int32
@@ -88,7 +88,7 @@ spec:
                     type: object
                   url:
                     description: |-
-                      URL gives the location of the Extension server, in standard URL form
+                      url gives the location of the Extension server, in standard URL form
                       (`scheme://host:port/path`).
                       Note: Exactly one of `url` or `service` must be specified.
 
@@ -107,7 +107,7 @@ spec:
                 type: object
               namespaceSelector:
                 description: |-
-                  NamespaceSelector decides whether to call the hook for an object based
+                  namespaceSelector decides whether to call the hook for an object based
                   on whether the namespace for that object matches the selector.
                   Defaults to the empty LabelSelector, which matches all objects.
                 properties:
@@ -158,7 +158,7 @@ spec:
                 additionalProperties:
                   type: string
                 description: |-
-                  Settings defines key value pairs to be passed to all calls
+                  settings defines key value pairs to be passed to all calls
                   to all supported RuntimeExtensions.
                   Note: Settings can be overridden on the ClusterClass.
                 type: object
@@ -169,7 +169,7 @@ spec:
             description: ExtensionConfigStatus is the current state of the ExtensionConfig
             properties:
               conditions:
-                description: Conditions define the current service state of the ExtensionConfig.
+                description: conditions define the current service state of the ExtensionConfig.
                 items:
                   description: Condition defines an observation of a Cluster API resource
                     operational state.
@@ -194,16 +194,16 @@ spec:
                       type: string
                     severity:
                       description: |-
-                        Severity provides an explicit classification of Reason code, so the users or machines can immediately
+                        severity provides an explicit classification of Reason code, so the users or machines can immediately
                         understand the current situation and act accordingly.
                         The Severity field MUST be set only when Status=False.
                       type: string
                     status:
-                      description: Status of the condition, one of True, False, Unknown.
+                      description: status of the condition, one of True, False, Unknown.
                       type: string
                     type:
                       description: |-
-                        Type of condition in CamelCase or in foo.example.com/CamelCase.
+                        type of condition in CamelCase or in foo.example.com/CamelCase.
                         Many .condition.type values are consistent across resources like Available, but because arbitrary conditions
                         can be useful (see .node.status.conditions), the ability to deconflict is important.
                       type: string
@@ -214,7 +214,7 @@ spec:
                   type: object
                 type: array
               handlers:
-                description: Handlers defines the current ExtensionHandlers supported
+                description: handlers defines the current ExtensionHandlers supported
                   by an Extension.
                 items:
                   description: ExtensionHandler specifies the details of a handler
@@ -222,22 +222,22 @@ spec:
                   properties:
                     failurePolicy:
                       description: |-
-                        FailurePolicy defines how failures in calls to the ExtensionHandler should be handled by a client.
+                        failurePolicy defines how failures in calls to the ExtensionHandler should be handled by a client.
                         Defaults to Fail if not set.
                       type: string
                     name:
-                      description: Name is the unique name of the ExtensionHandler.
+                      description: name is the unique name of the ExtensionHandler.
                       type: string
                     requestHook:
-                      description: RequestHook defines the versioned runtime hook
+                      description: requestHook defines the versioned runtime hook
                         which this ExtensionHandler serves.
                       properties:
                         apiVersion:
-                          description: APIVersion is the group and version of the
+                          description: apiVersion is the group and version of the
                             Hook.
                           type: string
                         hook:
-                          description: Hook is the name of the hook.
+                          description: hook is the name of the hook.
                           type: string
                       required:
                       - apiVersion
@@ -245,7 +245,7 @@ spec:
                       type: object
                     timeoutSeconds:
                       description: |-
-                        TimeoutSeconds defines the timeout duration for client calls to the ExtensionHandler.
+                        timeoutSeconds defines the timeout duration for client calls to the ExtensionHandler.
                         Defaults to 10 is not set.
                       format: int32
                       type: integer
