--- a/cmd/clusterctl/config/manifest/clusterctl-api.yaml
+++ b/cmd/clusterctl/config/manifest/clusterctl-api.yaml
@@ -52,19 +52,19 @@ spec:
           metadata:
             type: object
           providerName:
-            description: ProviderName indicates the name of the provider.
+            description: providerName indicates the name of the provider.
             type: string
           type:
             description: |-
-              Type indicates the type of the provider.
+              type indicates the type of the provider.
               See ProviderType for a list of supported values
             type: string
           version:
-            description: Version indicates the component version.
+            description: version indicates the component version.
             type: string
           watchedNamespace:
             description: |-
-              WatchedNamespace indicates the namespace where the provider controller is watching.
+              watchedNamespace indicates the namespace where the provider controller is watching.
               If empty the provider controller is watching for objects in all namespaces.
 
               Deprecated: providers complying with the Cluster API v1alpha4 contract or above must watch all namespaces; this field will be removed in a future version of this API
